Mise en oeuvre du profile d'un utilisateur Photo de profile, Cover, Name et Phone.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:appComponentFactory">
-        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".ChatActivity"
+            android:theme="@style/AppThemeNo"></activity>
+        <activity android:name=".LoginActivity" />
         <activity android:name=".DashboardActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".MainActivity">
